--- a/src/app/import-photos/import-photo/import-photo.component.html
+++ b/src/app/import-photos/import-photo/import-photo.component.html
@@ -19,6 +19,7 @@
 
 <div class ="row below ta-c" *ngIf="file">
     <div class="col s12">
-      <app-validate-btn (click)="validate()"></app-validate-btn>
+      <a class="btn-floating green" (click)="validate()"><i class="material-icons">done</i></a>
     </div>
 </div>
+
