--- a/src/app/medias/pictures/picture/picture.component.html
+++ b/src/app/medias/pictures/picture/picture.component.html
@@ -3,10 +3,10 @@
 <div class="menu">
   <div class ="row below ta-c">
     <div class="col s6">
-      <app-delete-btn (click)='goToCamera()'></app-delete-btn>
+      <a class="btn-floating green" (click)='goToCamera()'><i class="material-icons">delete</i></a>
     </div>
     <div class="col s6">
-      <app-validate-btn (click)='goToForm()'></app-validate-btn>
+      <a class="btn-floating green" (click)='goToForm()'><i class="material-icons">done</i></a>
     </div>
   </div>
 </div>
