--- a/src/app/processes/result/result.component.html
+++ b/src/app/processes/result/result.component.html
@@ -7,12 +7,12 @@
     <ul class="collection">
       <li class="collection-item" *ngFor="let item of displayList">
         <div class="row">
-          <div class="col s6 m6">{{ item["label"] }}</div>
-          <div #myDiv class="col s5 m5" [ngClass]="{ editable: item['editable'] }" [attr.contenteditable]="item['editable']"
+          <div class="col s5">{{ item["label"] }}</div>
+          <div #myDiv class="col s5" [ngClass]="{ editable: item['editable'] }" [attr.contenteditable]="item['editable']"
            (blur)="desactiveDivEditable(item['attribut'],myDiv.innerText)">
             {{ receipt[item["attribut"]] }}
           </div>
-          <div class="col s1 m1" *ngIf="!isLoading">
+          <div class="col s2" *ngIf="!isLoading">
             <a (click)="activeDivEditable(item['attribut'], myDiv)"><i class="material-icons green">edit</i></a>
           </div>
         </div>
@@ -23,9 +23,9 @@
 
 <div class="row below ta-c" *ngIf="!isLoading">
   <div class="col s6">
-    <app-delete-btn (click)="goToCamera()"></app-delete-btn>
+    <a class="btn-floating green" (click)="goToCamera()"><i class="material-icons">delete</i></a>
   </div>
   <div class="col s6">
-    <app-validate-btn (click)="goToReceiptList()"></app-validate-btn>
+    <a class="btn-floating green" (click)="goToReceiptList()"><i class="material-icons">done</i></a>
   </div>
 </div>
