--- a/src/app/processes/result/result.component.scss
+++ b/src/app/processes/result/result.component.scss
@@ -3,7 +3,12 @@
   border: 3px solid green;
 }
 
-
-.width75 {
-  width: 75%;
+.collection-item {
+  padding-left: 0;
+  padding-top: 10px;
+  padding-right:0;
 }
+
+// .collection{
+//   padding: 10 0 ;
+// }
