--- a/src/app/medias/cameras/camera/camera.component.scss
+++ b/src/app/medias/cameras/camera/camera.component.scss
@@ -1,10 +1,8 @@
-.webcam {
-    //width: 100%;
-    //height: 100vh;
-    position: fixed;
-    //top: 0;
-    //left: 0;
-    //z-index: -1;
+
+video {
+  background-color: black;
+  width: 100%;
+  height: 100vh;
 }
 canvas {
   display: none;
