--- a/src/app/medias/pictures/picture/picture.component.html
+++ b/src/app/medias/pictures/picture/picture.component.html
@@ -1,5 +1,7 @@
+<div class="bg-black">
+  <img #myImage [src]="picture.src">
+</div>
 
-<img #myImage class="img-fit pos-fixed" [src]="picture.src">
 <div class="menu">
   <div class ="row below ta-c">
     <div class="col s6">
