--- a/src/app/processes/result/result.component.html
+++ b/src/app/processes/result/result.component.html
@@ -1,19 +1,17 @@
 <app-loading *ngIf="isLoading"></app-loading>
-<div>
-  <div>
-    <img class="img-fit" [src]="picture.src" alt="Facture image" />
-  </div>
+<div class="container">
+  <img class="img-fit" [src]="picture.src" alt="Facture image" />
   <div class="row details">
     <ul class="collection">
       <li class="collection-item" *ngFor="let item of displayList">
         <div class="row">
           <div class="col s5">{{ item["label"] }}</div>
           <div #myDiv class="col s5" [ngClass]="{ editable: item['editable'] }" [attr.contenteditable]="item['editable']"
-           (blur)="desactiveDivEditable(item['attribut'],myDiv.innerText)">
+           (blur)="desactivateDivEditable(item['attribut'],myDiv.innerText)">
             {{ receipt[item["attribut"]] }}
           </div>
           <div class="col s2" *ngIf="!isLoading">
-            <a (click)="activeDivEditable(item['attribut'], myDiv)"><i class="material-icons green">edit</i></a>
+            <a (click)="activateDivEditable(item['attribut'], myDiv)"><i class="material-icons green">edit</i></a>
           </div>
         </div>
       </li>
@@ -21,7 +19,7 @@
   </div>
 </div>
 
-<div class="row below ta-c" *ngIf="!isLoading">
+<div class="row ta-c" *ngIf="!isLoading">
   <div class="col s6">
     <a class="btn-floating green" (click)="goToCamera()"><i class="material-icons">delete</i></a>
   </div>
