--- a/src/app/receipts/receipt-list/receipt-list.component.html
+++ b/src/app/receipts/receipt-list/receipt-list.component.html
@@ -16,7 +16,7 @@
 
 
 
-<div class="menu" *ngIf="checkedIds.length>0">
+<div class="tab-buttons" *ngIf="checkedIds.length>0">
     <div class="container">
         <div class="row center">
           <div class="col s3">
