--- a/src/app/receipts/receipt/receipt.component.html
+++ b/src/app/receipts/receipt/receipt.component.html
@@ -1,27 +1,24 @@
-<main class="format-receipt">
-  <div>
-    <div>
-      <img class="img-fit" [src]="receipt.imgSrc" alt = "Facture image">
-    </div>
-    <div class="row details">
+
+  <div class="container">
+    <img class="img-fit" [src]="receipt.imgSrc" alt = "Facture image">
+    <div class="row">
       <ul class="collection">
         <li class="collection-item" *ngFor="let item of displayList">
           <div class="row">
-            <div class="col s6 m6">{{item['label']}}</div>
-            <!-- (input)="onNameChange($event.target.innerHTML)" -->
-            <div #myDiv class="col s5 m5" [ngClass]="{'editable': item['editable']}" [attr.contenteditable]="item['editable']"
-            (blur)="desactiveDivEditable(item['attribut'], myDiv.innerText)">{{receipt[item['attribut']]}}</div>
-            <div class="col s1 m1">
-              <a (click)="activeDivEditable(item['attribut'], myDiv)"><i class="material-icons green">edit</i></a>
+            <div class="col s5 ">{{item['label']}}</div>
+            <div #myDiv class="col s5" [ngClass]="{'editable': item['editable']}" [attr.contenteditable]="item['editable']"
+            (blur)="desactivateDivEditable(item['attribut'], myDiv.innerText)">{{receipt[item['attribut']]}}</div>
+            <div class="col s2">
+              <a (click)="activateDivEditable(item['attribut'], myDiv)"><i class="material-icons green">edit</i></a>
             </div>
           </div>
         </li>
       </ul>
     </div>
   </div>
-</main>
-<footer>
-  <div class="menu">
+
+
+  <div class="tab-buttons">
     <div class="container">
         <div class="row center">
           <div class="col s4">
@@ -36,5 +33,5 @@
         </div>
     </div>
   </div>
-</footer>
+
 
