--- a/src/app/receipts/receipt/receipt.component.scss
+++ b/src/app/receipts/receipt/receipt.component.scss
@@ -6,21 +6,9 @@
     border: 3px solid green;
 }
 
-// .format-receipt{
-//   position: relative;
-//   top: 10vh;
-//   bottom: 0;
-//   left: 0;
-//   right: 0;
-//   height: 10vh;
-// }
-.menu{
-  background-color: rgb(231, 231, 235);
-  padding: 1rem 0;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 1;
-  height: 10vh;
+
+.collection-item {
+  padding-left: 0;
+  padding-top: 10px;
+  padding-right:0;
 }
